<?xml version="1.0"?>
<package format="2">
  <name>me495_practices</name>
  <version>0.0.1</version>
  <description>Demonstrate coding and testing</description>

  <maintainer email="elwin@northwestern.edu">Matthew Elwin</maintainer>

  <license>GPLv3</license>


  <author email="elwin@northwestern.edu">Matthew Elwin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
